# security_dlp_permission_service

./: BUILD.gn  README_zh.md  bundle.json  dlp_permission_service.gni  identify_sensitive_content.gni
frameworks/access_config/: BUILD.gn  clone_app_permission.json
interfaces/inner_api/dlp_fuse/: BUILD.gn
interfaces/inner_api/dlp_fuse/include/: dlp_fuse_adapter.h  dlp_fuse_fd.h  dlp_fuse_helper.h  dlp_fuse_utils.h  dlp_link_file.h  dlp_link_manager.h  fuse_daemon.h
interfaces/inner_api/dlp_fuse/src/: dlp_fuse_adapter.cpp  dlp_fuse_fd.c  dlp_fuse_helper.cpp  dlp_fuse_utils.cpp  dlp_link_file.cpp  dlp_link_manager.cpp  fuse_daemon.cpp
interfaces/inner_api/dlp_fuse/test/: BUILD.gn
interfaces/inner_api/dlp_parse/: BUILD.gn
interfaces/inner_api/dlp_parse/include/: dlp_crypt.h  dlp_file.h  dlp_file_kits.h  dlp_file_manager.h  dlp_file_operator.h  dlp_raw_file.h  dlp_utils.h  dlp_zip.h  dlp_zip_file.h
interfaces/inner_api/dlp_parse/src/: dlp_crypt.cpp  dlp_file.cpp  dlp_file_kits.cpp  dlp_file_manager.cpp  dlp_file_operator.cpp  dlp_raw_file.cpp  dlp_utils.cpp  dlp_zip.cpp  dlp_zip_file.cpp
interfaces/inner_api/dlp_parse/test/: BUILD.gn  dlp_crypt_test.cpp  dlp_file_kits_test.cpp  dlp_file_kits_test.h  dlp_file_manager_test.cpp  dlp_file_operator_test.cpp  dlp_file_operator_test.h  dlp_file_test.cpp  dlp_raw_file_test.cpp  dlp_utils_test.cpp  dlp_zip_file_test.cpp  dlp_zip_test.cpp  dlp_zip_test.h
interfaces/inner_api/dlp_permission/: BUILD.gn  DlpPermissionTypes.idl  IDlpPermissionService.idl
interfaces/inner_api/dlp_permission/include/: dlp_permission_async_stub.h  dlp_permission_callback.h  dlp_permission_client.h  dlp_permission_kit.h  dlp_permission_proxy.h  dlp_permission_public_interface.h
interfaces/inner_api/dlp_permission/src/: dlp_permission_async_stub.cpp  dlp_permission_client.cpp  dlp_permission_kit.cpp  dlp_permission_load_callback.cpp  dlp_permission_proxy.cpp  dlp_permission_public_interface.cpp
interfaces/inner_api/dlp_permission/test/: BUILD.gn
interfaces/inner_api/dlp_set_config/: BUILD.gn
interfaces/inner_api/dlp_set_config/include/: set_dlp_config.h
interfaces/inner_api/dlp_set_config/src/: set_dlp_config.cpp
interfaces/kits/: BUILD.gn
interfaces/kits/c/: BUILD.gn
interfaces/kits/c/include/: dlp_permission_api.h
interfaces/kits/c/src/: dlp_permission_api.cpp
interfaces/kits/dlp_permission/: BUILD.gn
interfaces/kits/identify_sensitive_content/: BUILD.gn
interfaces/kits/napi_common/include/: napi_common.h  napi_error_msg.h
interfaces/kits/napi_common/src/: napi_common.cpp  napi_common_custom.cpp  napi_common_enterprise.cpp  napi_error_msg.cpp
services/dlp_permission/sa/: BUILD.gn  dlp_permission_service.cfg
services/dlp_permission/sa/adapt/: account_adapt.cpp  account_adapt.h  app_state_observer.cpp  app_state_observer.h  app_uninstall_observer.cpp  app_uninstall_observer.h  file_operator.cpp  retention_file_manager.cpp  retention_file_manager.h  sandbox_json_manager.cpp  sandbox_json_manager.h  visit_record_file_manager.cpp  visit_record_file_manager.h  visit_record_json_manager.cpp  visit_record_json_manager.h
services/dlp_permission/sa/etc/: BUILD.gn  dlp_config.json
services/dlp_permission/sa/mock/: access_token_adapter_mock.cpp  dlp_credential_client.h  dlp_credential_client_defines.h  dlp_credential_service.c  dlp_policy_mgr_client.h  mock_utils.cpp  mock_utils.h
services/dlp_permission/sa/sa_common/: access_token_adapter.cpp  access_token_adapter.h  account_event_subscriber.cpp  account_event_subscriber.h  account_status_listener.cpp  account_status_listener.h  bundle_manager_adapter.cpp  bundle_manager_adapter.h  dlp_ability_adapter.cpp  dlp_ability_adapter.h  dlp_ability_conn.cpp  dlp_ability_conn.h  dlp_ability_proxy.cpp  dlp_ability_proxy.h  dlp_ability_stub.cpp  dlp_ability_stub.h  dlp_common_func.cpp  dlp_common_func.h  dlp_feature_info.cpp  dlp_feature_info.h  dlp_permission_serializer.cpp  dlp_permission_serializer.h  dlp_sandbox_info.h  permission_manager_adapter.cpp  permission_manager_adapter.h  water_mark_info.h
services/dlp_permission/sa/sa_main/: dlp_credential.cpp  dlp_credential.h  dlp_permission_async_proxy.cpp  dlp_permission_async_proxy.h  dlp_permission_service.cpp  dlp_permission_service.h  dlp_permission_stub.cpp  dlp_permission_stub.h
services/dlp_permission/sa/sa_profile/: 3521.json
services/dlp_permission/sa/test/: BUILD.gn
test/: BUILD.gn
test/fuzztest/dlp_permission/: BUILD.gn
test/fuzztest/dlp_permission/cancelretentionstate_fuzzer/: BUILD.gn
test/fuzztest/dlp_permission/cancelretentionstatestub_fuzzer/: BUILD.gn
test/unittest/: cfi_blocklist.txt
test/unittest/dlp_fuse/: dlp_file_test.cpp  dlp_fuse_test.cpp  dlp_fuse_test.h  fuse_daemon_test.cpp  fuse_mock.cpp
test/unittest/dlp_parse/: dlp_crypt_test.cpp  dlp_crypt_test.h  dlp_file_kits_test.cpp  dlp_file_manager_test.cpp  dlp_file_manager_test.h  dlp_file_operator_test.cpp  dlp_file_test.cpp  dlp_file_test.h  dlp_raw_file_test.cpp  dlp_raw_file_test.h  dlp_utils_test.cpp  dlp_utils_test.h  dlp_zip_file_test.cpp  dlp_zip_file_test.h  dlp_zip_test.cpp
test/unittest/dlp_permission/: dlfcn_mock.cpp  dlfcn_mock.h  dlp_permission_async_stub_test.cpp  dlp_permission_client_test.cpp  dlp_permission_info_parcel_test.cpp  dlp_permission_info_parcel_test.h  dlp_permission_kit_test.cpp  dlp_permission_kit_test.h  dlp_permission_proxy_test.h  dlp_permission_sdk_load_test.cpp  dlp_sandbox_change_callback_stub_test.h  dlp_set_config_test.cpp  dlp_set_config_test.h  dlp_transparent_enc_manager_test.cpp  dlp_transparent_enc_manager_test.h  open_dlp_file_callback_stub_test.cpp  open_dlp_file_callback_stub_test.h
test/unittest/dlp_set_config/: dlp_set_config_test.cpp  dlp_set_config_test.h
test/unittest/mock/: c_mock_common.cpp  c_mock_common.h  dlp_ability_conn_mock.cpp  dlp_ability_conn_mock_helper.h  dlp_ability_stub_mock.cpp  dlp_ability_stub_mock_helper.h  dlp_permission_kit.cpp  dlp_permission_kit.h  dlp_utils_mock.cpp  extension_manager_client.h  file_io_mock.cpp  openssl_mock.cpp  zlib_mock.cpp
(+622 files in other folders)
