# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("../dlp_permission_service.gni")

group("dlp_permission_build_module_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [
      ":dlp_file_test",
      ":dlp_fuse_test",
      ":dlp_parse_test",
      ":dlp_utils_test",
      ":dlp_permission_kit_test",
      ":dlp_permission_service_test",
      ":dlp_permission_serializer_test",
      ":dlp_permission_serializer_sub_test",
      ":dlp_credential_static_test",
      ":dlp_permission_static_test",
    ]
  }
}

group("dlp_permission_build_fuzz_test") {
  testonly = true
  deps = []
  if (is_standard_system) {
    deps += [ "fuzztest/dlp_permission:fuzztest" ]
  }
}

ohos_unittest("dlp_permission_static_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
 
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name
 
  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/include",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/test/sa/static",
  ]
 
  sources = [
    "unittest/sa/static/dlp_permission_static_test.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_async_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_credential.cpp",
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/auth_user_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_policy_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_sandbox_callback_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/open_dlp_file_callback_info_parcel.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/src/dlp_permission_public_interface.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_utils.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src/alg_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src/alg_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/src/huks_adapt_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt/account_adapt.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_state_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_uninstall_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_handler.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_helper.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/retention_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/sandbox_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/dlp_credential_service.c",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/mock_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/access_token_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/bundle_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_common_func.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_feature_info.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/permission_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_conn.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_stub.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/dlp_kv_data_storage.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/sandbox_config_kv_data_storage.cpp",
  ]
 
  configs = [ 
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]
 
  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DDLP_UNIT_TEST",
  ]
  cflags = [ "-DHILOG_ENABLE" ]
 
  deps = [
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_service.rc",
    "${dlp_root_dir}/services/dlp_permission/sa/etc:param_files",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "ability_runtime:extension_manager",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_connect_callback_stub",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libtokensetproc_shared",
    "access_token:libnativetoken_shared",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "huks:libhukssdk",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "memmgr:memmgrclient",
    "os_account:domain_account_innerkits",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
    "window_manager:libwm_lite",
    "image_framework:image_native",
    "image_framework:image_source",
    "image_framework:image_source_ndk",
    "image_framework:pixelmap_ndk",
    "image_framework:pixelmap",
    "resource_management:librawfile",
    "graphic_2d:librender_service_client",
    "graphic_2d:librender_service_base",
  ]
}

ohos_unittest("dlp_credential_static_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
 
 
  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name
 
  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/include",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/test/sa/static",
  ]
 
  sources = [
    "unittest/sa/static/dlp_credential_static_test.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_async_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_service.cpp",
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/auth_user_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_policy_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_sandbox_callback_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/open_dlp_file_callback_info_parcel.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/src/dlp_permission_public_interface.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_utils.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src/alg_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src/alg_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/src/huks_adapt_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt/account_adapt.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_state_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_uninstall_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_handler.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_helper.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/retention_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/sandbox_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/dlp_credential_service.c",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/mock_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/access_token_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/bundle_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_common_func.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_feature_info.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/permission_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_conn.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_stub.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/dlp_kv_data_storage.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/sandbox_config_kv_data_storage.cpp",
  ]
 
  configs = [ 
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]
 
  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DDLP_UNIT_TEST",
  ]
  cflags = [ "-DHILOG_ENABLE" ]
 
  deps = [
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_service.rc",
    "${dlp_root_dir}/services/dlp_permission/sa/etc:param_files",
  ]
 
  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "ability_runtime:extension_manager",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_connect_callback_stub",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "huks:libhukssdk",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "memmgr:memmgrclient",
    "os_account:domain_account_innerkits",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
    "window_manager:libwm_lite",
    "image_framework:image_native",
    "image_framework:image_source",
    "image_framework:image_source_ndk",
    "image_framework:pixelmap_ndk",
    "image_framework:pixelmap",
    "resource_management:librawfile",
    "graphic_2d:librender_service_client",
    "graphic_2d:librender_service_base",
  ]
}

ohos_unittest("dlp_permission_service_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "./unittest/cfi_blocklist.txt"
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/include",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/test/sa/src",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_service.cpp",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/auth_user_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_policy_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_sandbox_callback_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/open_dlp_file_callback_info_parcel.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/src/dlp_sandbox_change_callback_stub.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/src/open_dlp_file_callback_stub.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt/account_adapt.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/alg_manager/src/alg_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/alg_adapt/huks_adapt_manager/src/huks_adapt_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_state_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/app_observer/app_uninstall_observer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_handler.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/critical_handler/critical_helper.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/retention_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/sandbox_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_file_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/visit_record_json_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/dlp_sandbox_change_callback/dlp_sandbox_change_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_death_recipient.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_manager.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/callback/open_dlp_file_callback/open_dlp_file_callback_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/access_token_adapter_mock.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/dlp_credential_service.c",
    "${dlp_root_dir}/services/dlp_permission/sa/mock/mock_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/bundle_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_common_func.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_feature_info.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_conn.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_ability_stub.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_async_proxy.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_main/dlp_permission_service.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/dlp_kv_data_storage.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/storage/src/sandbox_config_kv_data_storage.cpp",
    "unittest/sa/src/account_adapt_test.cpp",
    "unittest/sa/src/alg_utils_test.cpp",
    "unittest/sa/src/app_state_observer_test.cpp",
    "unittest/sa/src/dlp_bundle_adapter_test.cpp",
    "unittest/sa/src/dlp_callback_test.cpp",
    "unittest/sa/src/dlp_cert_parcel_test.cpp",
    "unittest/sa/src/dlp_common_func_test.cpp",
    "unittest/sa/src/dlp_credential_test.cpp",
    "unittest/sa/src/dlp_feature_info_test.cpp",
    "unittest/sa/src/dlp_kv_storage_test.cpp",
    "unittest/sa/src/dlp_parcel_test.cpp",
    "unittest/sa/src/dlp_permission_service_test.cpp",
    "unittest/sa/src/dlp_permission_service_append_test.cpp",
    "unittest/sa/src/hex_string_test.cpp",
    "unittest/sa/src/huks_adapt_manager_test.cpp",
    "unittest/sa/src/huks_apply_permission_test_common.cpp",
    "unittest/sa/src/permission_manager_adapter_mock.cpp",
    "unittest/sa/src/permission_policy_test.cpp",
    "unittest/sa/src/retention_file_manager_test.cpp",
    "unittest/sa/src/sandbox_json_manager_test.cpp",
  ]

  configs = [ 
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DDLP_UNIT_TEST",
  ]
  cflags = [ "-DHILOG_ENABLE" ]

  deps = [
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:dlp_permission_interface",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_service.rc",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "ability_runtime:extension_manager",
    "ability_runtime:ability_manager",
    "ability_runtime:ability_connect_callback_stub",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "config_policy:configpolicy_util",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "huks:libhukssdk",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "kv_store:distributeddata_inner",
    "memmgr:memmgrclient",
    "openssl:libcrypto_shared",
    "os_account:domain_account_innerkits",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libwm_lite",
    "image_framework:image_native",
    "image_framework:image_source",
    "image_framework:image_source_ndk",
    "image_framework:pixelmap_ndk",
    "image_framework:pixelmap",
    "resource_management:librawfile",
    "graphic_2d:librender_service_client",
    "graphic_2d:librender_service_base",
  ]
}

ohos_unittest("dlp_permission_serializer_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt",
    "${dlp_root_dir}/test/unittest/sa/mock",
    "${dlp_root_dir}/test/unittest/sa/src",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt/account_adapt.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_permission_serializer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/permission_manager_adapter.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/sa/src/dlp_permission_serializer_test.cpp",
    "unittest/sa/src/account_adapt_mock_test.cpp",
    "unittest/sa/mock/dlp_os_account_mock.cpp",
  ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DDLP_UNIT_TEST",
  ]
  cflags = [ "-DHILOG_ENABLE" ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:dlp_permission_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]
}

ohos_unittest("dlp_permission_serializer_sub_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt",
    "${dlp_root_dir}/test/unittest/sa/mock",
    "${dlp_root_dir}/test/unittest/sa/src",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_utils.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/account_adapt/account_adapt.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common/dlp_permission_serializer.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/sa/src/dlp_permission_serializer_sub_test.cpp",
    "unittest/sa/src/account_adapt_mock_test.cpp",
    "unittest/sa/mock/dlp_os_account_sub_mock.cpp",
  ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DDLP_UNIT_TEST",
  ]
  cflags = [ "-DHILOG_ENABLE" ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:dlp_permission_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]
}

ohos_unittest("dlp_permission_kit_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/frameworks/dlp_permission/include",
    "${dlp_root_dir}/test/unittest/mock/test_common",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_set_config/include",
  ]

  sources = [
    "unittest/dlp_permission/dlp_permission_async_stub_test.cpp",
    "unittest/dlp_permission/dlp_permission_client_test.cpp",
    "unittest/dlp_permission/dlp_permission_kit_test.cpp",
    "unittest/dlp_permission/dlp_permission_proxy_test.cpp",
    "unittest/dlp_permission/dlp_sandbox_change_callback_stub_test.cpp",
    "${dlp_root_dir}/test/unittest/mock/test_common/token_mock_test_common.cpp",
    "unittest/dlp_permission/dlp_set_config_test.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_set_config/src/set_dlp_config.cpp",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  deps = [
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtokensetproc_shared",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared",
  ]
}

config("dlp_unittest_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
  ]
  cflags = [
    "-D_GNU_SOURCE",
    "-w",
  ]
}

ohos_unittest("dlp_parse_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    blocklist = "./unittest/cfi_blocklist.txt"
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name
  public_configs = [ ":dlp_unittest_config" ]
  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/test/unittest/mock/c_mock_common.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_permission_kit.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_utils_mock.cpp",
    "${dlp_root_dir}/test/unittest/mock/file_io_mock.cpp",
    "${dlp_root_dir}/test/unittest/mock/openssl_mock.cpp",
    "${dlp_root_dir}/test/unittest/mock/zlib_mock.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_crypt.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_raw_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_kits.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/dlp_parse/dlp_crypt_test.cpp",
    "unittest/dlp_parse/dlp_file_kits_test.cpp",
    "unittest/dlp_parse/dlp_file_manager_test.cpp",
    "unittest/dlp_parse/dlp_file_test.cpp",
    "unittest/dlp_parse/dlp_zip_test.cpp",
    "unittest/dlp_parse/dlp_file_operator_test.cpp",
    "unittest/dlp_parse/dlp_zip_file_test.cpp",
    "unittest/dlp_parse/dlp_raw_file_test.cpp",
  ]

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/test/unittest/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokensetproc_shared",
    "access_token:libnativetoken_shared",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

ohos_unittest("dlp_utils_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name
  public_configs = [ ":dlp_unittest_config" ]
  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/test/unittest/mock/c_mock_common.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_permission_kit.cpp",
    "${dlp_root_dir}/test/unittest/mock/file_io_mock.cpp",
    "${dlp_root_dir}/test/unittest/mock/openssl_mock.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_crypt.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_raw_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_kits.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_operator.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/dlp_parse/dlp_utils_test.cpp",
  ]

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/test/unittest/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
  ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokensetproc_shared",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

ohos_unittest("dlp_file_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission/include/",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/test/unittest/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/test/unittest/mock/c_mock_common.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_permission_kit.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_utils_mock.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_crypt.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_kits.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_operator.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_raw_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/dlp_fuse/dlp_file_test.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:dlp_permission_interface",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_hex_string_static",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken_shared",
    "access_token:libtokensetproc_shared",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

ohos_unittest("dlp_fuse_test") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "security"
  part_name = "dlp_permission_service"
  module_out_path = part_name + "/" + part_name

  include_dirs = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/include",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/include",
    "${dlp_root_dir}/frameworks/common/include",
    "${dlp_root_dir}/test/unittest/mock/",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager",
    "${dlp_root_dir}/services/dlp_permission/sa/mock",
    "${dlp_root_dir}/services/dlp_permission/sa/sa_common",
  ]

  sources = [
    "${dlp_root_dir}/frameworks/common/src/cert_parcel.cpp",
    "${dlp_root_dir}/frameworks/common/src/permission_policy.cpp",
    "${dlp_root_dir}/frameworks/common/src/retention_sandbox_info.cpp",
    "${dlp_root_dir}/frameworks/common/src/visited_dlp_file_info.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/auth_user_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_permission_info_parcel.cpp",
    "${dlp_root_dir}/frameworks/dlp_permission/src/dlp_policy_parcel.cpp",
    "${dlp_root_dir}/test/unittest/mock/c_mock_common.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_permission_kit.cpp",
    "${dlp_root_dir}/test/unittest/mock/dlp_utils_mock.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_fuse_fd.c",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_fuse_helper.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_fuse_utils.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_link_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/dlp_link_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_fuse/src/fuse_daemon.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_crypt.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_kits.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_file_manager.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_raw_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip_file.cpp",
    "${dlp_root_dir}/interfaces/inner_api/dlp_parse/src/dlp_zip.cpp",
    "${dlp_root_dir}/services/dlp_permission/sa/adapt_utils/file_manager/file_operator.cpp",
    "unittest/dlp_fuse/dlp_fuse_test.cpp",
    "unittest/dlp_fuse/fuse_daemon_test.cpp",
    "unittest/dlp_fuse/fuse_mock.cpp",
  ]

  cflags_cc = [
    "-DHILOG_ENABLE",
    "-DFUSE_USE_VERSION=35",
  ]

  cflags = [ "-DHILOG_ENABLE" ]

  configs = [
    "${dlp_permission_public_config_path}/:dlp_permission_sdk_config",
    "${dlp_root_dir}/config:coverage_flags",
    ":stub_tdd_need_skip_timer_config",
  ]

  deps = [
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:dlp_permission_interface",
    "${dlp_permission_public_config_path}/:dlp_permission_stub",
    "${dlp_root_dir}/interfaces/inner_api/dlp_permission:libdlp_permission_common_interface",
    "${dlp_root_dir}/services/dlp_permission/sa:dlp_permission_serializer_static",
  ]

  external_deps = [
    "ability_base:want",
    "ability_base:zuri",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokensetproc_shared",
    "app_file_service:fileuri_native",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "libfuse:libfuse",
    "openssl:libcrypto_shared",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]

  if (current_cpu == "arm64") {
    defines = [ "_ARM64_" ]
  }
}

config("stub_tdd_need_skip_timer_config") {
  cflags_cc = []
  cflags_cc += [ "-DDLP_FUZZ_TDD_TEST" ]
}
